added switch button, to switch between version of the counter

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   background: #404046;
-  gap: 10%;
 }
